--- a/src/assets/styles/_animations.scss
+++ b/src/assets/styles/_animations.scss
@@ -1,6 +1,22 @@
 @keyframes homeIn {
-	0% { transform: translateY(-50vh) }
-	100% { transform: translateY(0) }
+	0% {
+		transform: translateY(-50vh) rotate(0deg) translateX(-10px);
+		min-width: 250%;
+		height: 200%;
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0) rotate(45deg) translateX(-10px);
+		min-width: 240%;
+		height: 150%;
+		opacity: 1;
+	}
+}
+
+@keyframes pulse {
+	0% { transform: scale(1) }
+	50% { transform: scale(1.03) }
+	100% { transform: scale(1) }
 }
 
 @keyframes aboutIn {
