--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -1,7 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: 'Work Sans', serif;
+	font-family: $secondary-font;
 	box-sizing: border-box;
 }
 
@@ -15,4 +15,9 @@ body {
 
 h3 {
 	font-size: 20px;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	font-family: 'Work Sans', Open Sans;
+	font-weight: 700;
 }
