--- a/src/assets/styles/_animations.scss
+++ b/src/assets/styles/_animations.scss
@@ -8,7 +8,7 @@
 	100% { transform: translateY(0) }
 }
 
-@keyframes aboutScreenIn {
+@keyframes pageScreenIn {
 	0% { transform: translate(-50%, 100vh); margin: 0 50%; }
 	100% { transform: translate(-50%, 0); margin: 0 50%; }
 }
@@ -18,7 +18,7 @@
 	100% { transform: translateY(0) }
 }
 
-@keyframes aboutScreenOutMobile {
+@keyframes pageScreenOutMobile {
 	0% { transform: translate(-50%, -100vh); margin: 0 50%; }
 	100% { transform: translate(-50%, 0); margin: 0 50%; }
 }
@@ -28,7 +28,7 @@
 	100% { transform: translateY(0) }
 }
 
-@keyframes aboutScreenOutTablet {
+@keyframes pageScreenOutTablet {
 	0% { transform: translate(-50%, -100vh); margin: 0 50%; }
 	100% { transform: translate(-50%, 0); margin: 0 50%; }
 }
