CIRCLECI: Finished write up

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -10,8 +10,8 @@ $secondary-colour: #f5e65e;
 $secondary-colour-15: lighten($secondary-colour, 15%);
 $secondary-light: #ffff72;
 $secondary-dark: #c8b900;
-$secondary-text: #f5e65e;
-$secondary-text-header: darken($secondary-text, 18%);
+$secondary-text: #f6eb7d;
+$secondary-text-header: #e8da5d;
 
 $primary-font: 'Work San', Open Sans;
 
